Правка документации Resource в Swagger
